[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cityscope"
version = "0.2.0"
description = "Cool things happening in any city, mined from forums and local papers."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
]

[project.optional-dependencies]
live = [
    "feedparser>=6.0",        # robust RSS parsing
]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",            # FastAPI TestClient
]

[tool.setuptools.packages.find]
include = ["cityscope*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
